# ProteinSynthesis

./: .gitignore  file.out  main.py  pyproject.toml
genetics/: amino_acids.py  cell.py  dna.py  mixins.py  protein_synthesis.py  rna.py
